modified-small-details

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <title>Zay - About</title>
 
         <!-- CSS Files -->
-        <link rel="stylesheet" href="./assets/style/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
         <link rel="stylesheet" href="./assets/style/style.css">
 
         <!-- Favicon -->
@@ -55,13 +55,13 @@
             </nav>
 
             <!-- Hero -->
-            <section class="hero-about container">
+            <div class="hero-about container">
                 <div>
                     <h1>About Us</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
                 <img src="./assets/img/about-hero.svg" alt="">
-            </section>
+            </div>
 
         </header>
         <!-- End Header -->
