--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,9 @@
         <title>Zay - Contact</title>
 
         <!-- CSS Files -->
-        <link rel="stylesheet" href="./assets/style/all.min.css">
         <link rel="stylesheet" href="./assets/style/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+        
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
@@ -72,7 +73,7 @@
             <section class="contact-section-2">
                 <iframe id="map" src=""></iframe>
                 <p id="text">Zay eCommerce Template Location. <i class="fa-solid fa-x"></i></p>
-                <i onclick="showmap()" class="icon fa-solid fa-location-pin"></i>
+                <i id="location-icon" onclick="showmap()" class="icon fa-solid fa-location-pin"></i>
             </section>
 
             <!-- Section 3 -->
