--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Zay - Home</title>
 
         <!-- CSS Files -->
-        <link rel="stylesheet" href="./assets/style/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
         <link rel="stylesheet" href="./assets/style/style.css">
 
         <!-- Favicon -->
@@ -54,7 +54,7 @@
             </nav>
 
             <!-- Hero -->
-            <section class="hero-home container">
+            <div class="hero-home container">
                 <div class="slider-img container">
                     <div>
                         <h1>Proident Occaecat</h1>
@@ -72,7 +72,7 @@
                     <i class="icon fa-solid fa-minus" id="slider-icon-2"></i>
                     <i class="icon fa-solid fa-minus" id="slider-icon-3"></i>
                 </div>
-            </section>
+            </div>
 
         </header>
         <!-- End Header -->
