--- a/contact.html
+++ b/contact.html
@@ -148,6 +148,8 @@
         </footer>
         <!-- End Footer -->
 
+        <!-- Scroll To Top -->
+        <i class="to-top fa-solid fa-arrow-up" id="up" onclick="Top()"></i>
 
         <!-- JS File -->
         <script src="./assets/JS/script.js"></script>
